--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 
 header {
     width: 100%;
-    padding: 10px 0.5% 0px 0.5%;
+    /* padding: 10px 0.5% 0px 0.5%; */
     background: transparent;
     float: left;
     position: fixed;
