--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,6 @@ header #logo span {
     z-index: 5000;
     background-color: #fefefe;
     border-bottom: 1px solid silver;
-
 }
 
 .fixed #about a {
@@ -119,29 +118,116 @@ header #logo span {
     box-shadow: 5px 2.5px 5px black;
 }
 
+/* Media Header - Nav - About */
+
+@media screen and (max-width: 821px) {
+    header #about {
+        display: grid;
+        grid-template-columns: 1fr;
+        height: 200px;
+    }
+
+    header #logo {
+        height: 200px;
+    }
+
+    header {
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 1230px) and (min-width: 822px) {
+    header #about {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: 140px;
+    }
+
+    header #logo {
+        height: 140px;
+    }
+
+    header {
+        height: 140px;
+    }
+}
+
+@media screen and (min-width: 1231px) {
+    header #about {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+/* Media Header - logo */ 
+
+@media screen and (min-width: 1072px) {
+    header #logo {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 1133px) {
+    header #logo {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
+
 /* top bloc style */
 
 #top {
-    width: 100%;
-    height: 1000px;
-    background-color: #181a1e; 
+    padding: 100px 20%;
+    width: 60%;
+    height: 500px;
+    float: left;
+    background-color: #181a1e;
     background-size: cover;
-    text-align: center;
     color: #fefefe;
+    border-top: 2px solid silver;
     font-size: 3em;
-}
-
-#top h1 {
-    padding-top: 20%;
-    margin-bottom: 30px;
 }
 
 #top p {
     font-size: 1.2em;
 }
 
-#top .leaf li {
-    padding: 2px 5px;
+@media screen and (max-width: 1138px) {
+    #top {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-top: 30%;
+    }
+
+    #top div {
+        padding-top: 5%;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #top {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-top: 40%;
+    }
+
+    #top div {
+        padding-top: 5%;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 1137px) {
+    #top {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-top: 15%;
+    }
+    #top div {
+        width: 100%;
+    }
 }
 
 /* formulaForSuccess style */
@@ -149,7 +235,7 @@ header #logo span {
 #formulaForSuccess {
     padding: 100px 20%;
     width: 60%;
-    height: 700px;
+    height: 400px;
     float: left;
     background-color: #181a1e;
     color: #fefefe;
@@ -171,6 +257,29 @@ header #logo span {
     color: darkgray
 }
 
+@media screen and (max-width: 967px) {
+    #formulaForSuccess {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+}
+
+
+@media screen and (min-width: 968px) {
+    #formulaForSuccess {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+    }
+}
+
+
+@media screen and (max-width: 511px) {
+    #formulaForSuccess {
+        height: 450px;
+    }
+}
 /* bestCode style */
 
 #bestCode {
@@ -196,6 +305,23 @@ header #logo span {
 
 #bestCode p {
     color: darkgray;
+}
+
+@media screen and (max-width: 1000px) {
+    #bestCode {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+}
+
+
+@media screen and (min-width: 1001px) {
+    #bestCode {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+    }
 }
 
 /* animal style */
@@ -230,9 +356,25 @@ header #logo span {
     color: #fefefe;
 }
 
+@media screen and (max-width: 1000px) {
+    #animal {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
+
+
+@media screen and (min-width: 1001px) {
+    #animal {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 /* footer style */
 
 footer {
+    position: relative;
     width: 100%;
     height: 30px;
     float: left;
@@ -241,3 +383,104 @@ footer {
     border-top: 2px solid silver;
     font-size: 1em;
 }
+
+/* Table */
+
+#Table {
+    padding: 100px 20%;
+    width: 60%;
+    height: 300px;
+    float:left;
+    align-items: center;
+    background-color: #181a1e;
+    color: black;
+    border-top: 2px solid silver;
+    font-size: 1em;
+}
+
+table {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    table-layout: fixed;
+  }
+  
+  table caption {
+    font-size: 1.5em;
+    margin: .5em 0 .75em;
+    color: #fefefe;
+  }
+  
+  table tr {
+    background-color: lightgray;
+    border: 1px solid black;
+    padding: .35em;
+  }
+  
+  table th,
+  table td {
+    padding: .625em;
+    text-align: center;
+  }
+  
+  table th {
+    font-size: .85em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
+  
+@media screen and (max-width: 950px) {
+    table {
+        border: 0;
+    }
+  
+    table caption {
+        font-size: 1.3em;
+        color: #fefefe;
+    }
+    
+    table thead {
+        border: none;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
+    
+    table tr {
+        border-bottom: 3px solid #ddd;
+        display: block;
+        margin-bottom: .625em;
+    }
+    
+    table td {
+        border-bottom: 1px solid #ddd;
+        display: block;
+        font-size: .8em;
+        text-align: right;
+    }
+    
+    table td::before {
+        content: attr(data-label);
+        float: left;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+    
+    table td:last-child {
+        border-bottom: 0;
+    }
+
+    #Table {
+        height: 600px;
+    }
+  }
+  
+  tr:nth-child(even) {
+    background-color: grey;
+  }
