--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 /* 
-+ Добавить тени 
-+ Добавить насыщенность шрифта
-+ formulaForSuccess в div - span исправить поставить <p>
-+ еще <p> поменять в некоторых меатах 
-+ <section id="top"> навести красоту исправить H3 исправить список 
-
-+ 1em = 12pt = 16px = 100%.
-
-Разницу между этими единицами легко понять на конкретных примерах. 
-Вот как они соотносятся друг с другом: 1em = 12pt = 16px = 100%. 
-Давайте посмотрим, что произойдет, когда мы увеличим основной размер шрифта 
-(используя CSS-селектор body) с 100% до 120%.
-
-Как видите, Эм и Процент увеличиваются по мере увеличения основного размера шрифта,
-а Пиксели и Точки – нет. Легко использовать абсолютный размер для вашего текста, 
-но намного легче использовать масштабируемый текст, который отображается на любом устройстве. 
-Поэтому для текста веб-документа предпочтительнее использовать единицы Эм и Проценты.
+foorte
+header
+bestcodetext
 */
 
 * {
@@ -110,6 +96,11 @@ header #logo span {
     color: black;
 }
 
+.fixed #about > a:hover {
+    color: gray;
+    text-decoration: underline;
+}
+
 .fixed #logo span {
     color: #181a1e;
 }
@@ -124,15 +115,15 @@ header #logo span {
     header #about {
         display: grid;
         grid-template-columns: 1fr;
-        height: 200px;
+        height: 320px;
     }
 
     header #logo {
-        height: 200px;
+        height: 320px;
     }
 
     header {
-        height: 200px;
+        height: 320px;
     }
 }
 
@@ -140,22 +131,22 @@ header #logo span {
     header #about {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        height: 140px;
+        height: 170px;
     }
 
     header #logo {
-        height: 140px;
+        height: 170px;
     }
 
     header {
-        height: 140px;
+        height: 170px;
     }
 }
 
 @media screen and (min-width: 1231px) {
     header #about {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
 
@@ -384,103 +375,3 @@ footer {
     font-size: 1em;
 }
 
-/* Table */
-
-#Table {
-    padding: 100px 20%;
-    width: 60%;
-    height: 300px;
-    float:left;
-    align-items: center;
-    background-color: #181a1e;
-    color: black;
-    border-top: 2px solid silver;
-    font-size: 1em;
-}
-
-table {
-    border: 1px solid #ccc;
-    border-collapse: collapse;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    table-layout: fixed;
-  }
-  
-  table caption {
-    font-size: 1.5em;
-    margin: .5em 0 .75em;
-    color: #fefefe;
-  }
-  
-  table tr {
-    background-color: lightgray;
-    border: 1px solid black;
-    padding: .35em;
-  }
-  
-  table th,
-  table td {
-    padding: .625em;
-    text-align: center;
-  }
-  
-  table th {
-    font-size: .85em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  
-@media screen and (max-width: 950px) {
-    table {
-        border: 0;
-    }
-  
-    table caption {
-        font-size: 1.3em;
-        color: #fefefe;
-    }
-    
-    table thead {
-        border: none;
-        clip: rect(0 0 0 0);
-        height: 1px;
-        margin: -1px;
-        overflow: hidden;
-        padding: 0;
-        position: absolute;
-        width: 1px;
-    }
-    
-    table tr {
-        border-bottom: 3px solid #ddd;
-        display: block;
-        margin-bottom: .625em;
-    }
-    
-    table td {
-        border-bottom: 1px solid #ddd;
-        display: block;
-        font-size: .8em;
-        text-align: right;
-    }
-    
-    table td::before {
-        content: attr(data-label);
-        float: left;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-    
-    table td:last-child {
-        border-bottom: 0;
-    }
-
-    #Table {
-        height: 600px;
-    }
-  }
-  
-  tr:nth-child(even) {
-    background-color: grey;
-  }
