--- a/css/table.css
+++ b/css/table.css
@@ -47,7 +47,7 @@ table {
     text-transform: uppercase;
   }
   
-@media screen and (max-width: 950px) {
+/* @media screen and (max-width: 950px) {
     table {
         border: 0;
     }
@@ -96,10 +96,10 @@ table {
         height: 600px;
     }
   }
-  
+  */
 tr:nth-child(even) {
     background-color: grey;
-}
+} 
 
 * {
     margin: 0;
