--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body, html {
 }
 
 body {
-    background-color: #181a1e; 
+    background: url("../images/back.jpg") repeat;
     font-family: Trebuchet MS, Helvetica;
 }
 
@@ -54,9 +54,9 @@ header #logo {
 }
 
 header #hp {
-    float: left;   
+    float: left;
     width: 75px;
-    height: 75px; 
+    height: 75px;
     border-radius: 50%;
     margin: 0px 30px 0px 30px;
     box-shadow: 5px 2.5px 5px black;
@@ -72,7 +72,7 @@ header #logo span {
 #about {
     text-align: center;
     font-size: 1.7em;
-    line-height: 75px; 
+    line-height: 75px;
 }
 
 #about > a {
@@ -149,7 +149,7 @@ header #logo {
     width: 60%;
     height: 500px;
     float: left;
-    background-color: #181a1e;
+    background: url("../images/back.jpg") repeat;
     background-size: cover;
     color: #fefefe;
     border-top: 2px solid silver;
@@ -254,7 +254,7 @@ header #logo {
     width: 60%;
     height: 300px;
     float: left;
-    background-color: #181a1e;
+    background: url("../images/back.jpg") repeat;
     color: #fefefe;
     border-top: 2px solid silver;
     font-size: 1em;
@@ -264,7 +264,7 @@ header #logo {
     width: 48%;
     margin-right: 2%;
     float: left;
-} 
+}
 
 #bestCode h2 {
     font-size: 3em;
@@ -308,7 +308,7 @@ header #logo {
     width: 48%;
     margin-right: 2%;
     float: left;
-} 
+}
 
 #animal h2 {
     font-size: 3em;
@@ -350,4 +350,3 @@ footer {
     border-top: 2px solid silver;
     font-size: 1em;
 }
-
